Add Mysql Property

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 google.client.secret.id=1039179496823-6ilqpakab9g3sp1fl3ndb7jl5spghfo8.apps.googleusercontent.com
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url= jdbc:mysql://192.249.18.221:3306/madcamp_week_2
+spring.datasource.username=root
+spring.datasource.password=1234
