--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url= jdbc:mysql://192.249.18.221:3306/madcamp_week_2
 spring.datasource.username=root
 spring.datasource.password=1234
+
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database=mysql
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
